# psxc-research

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
psxc/: __init__.py  dynamics.py  ppo.py  utils.py
scripts/: chemotactic_index.py  chemotaxis_movie.py  chemotaxis_trajectories.py  decision_making.py  eval_ppo_strategy.py  parameters_estimation.py  pseudopod_counter.py  speed_accuracy_decision.py  train_suppresion.py  weber_law.py
