[project]
name = "psxc"
version = "0.1.0"
description = "Code for the paper on Actin Dynamics for Decision Making and Pseudopod Splitting"
requires-python = ">=3.9"
authors = [
    {name = "Albert Alonso", email = "albert.alonso@nbi.ku.dk"},
]


[tool.setuptools]
packages = ["psxc", ]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

